# meteor

./: .gitignore  .gitmodules  README.md  build-llvm.ps1  build-llvm.sh  build_llvm.ps1  build_llvm.sh  build_project.ps1  build_project.sh  build_shaders.ps1  build_shaders.sh  debug_project.ps1  debug_project.sh  llvm.py  makefile  meteor.py  project.py  readme.md  setup_env.ps1  setup_env.sh  setup_environment.ps1
cmake/: common.cmake  opengl.cmake  version.cmake  vulkan.cmake
example_empty/: CMakeLists.txt
example_vulkan/: CMakeLists.txt  main.c
projects/arena/: CMakeLists.txt  main.c
projects/game/: CMakeLists.txt  assets.c  assets.h  component.h  config.h  descriptor.h  entity.c  entity.h  interface.c  interface.h  main.c  pushconstants.h  renderer.c  renderer.h  scene.c  scene.h  storage.h  world.c  world.h
projects/game/shaders/: debug.frag  debug.vert  default.frag  default.vert  interface.frag  interface.vert  particle.comp  particle.frag  particle.vert  pixel.comp  tree.frag  tree.vert
projects/sandsim/: CMakeLists.txt  actor.c  actor.h  main.c  renderer.c  renderer.h  scene.c  scene.h  storage.h
projects/sandsim/shaders/: default.frag  default.vert  sand.comp
projects/test/: CMakeLists.txt  main.c
projects/vulkan/: CMakeLists.txt  actor.h  main.c  scene.h
projects/vulkan/shaders/: debug.frag  debug.vert  default.frag  default.vert  interface.frag  interface.vert  test.frag  test.vert
src/: core.h  fs.c  fs.h  glad.c  glad.h  list.c  list.h  main.c  main.h  window.c  window.h
viewer/: CMakeLists.txt  main.c  makefile
viewer/shaders/: test.comp  test.frag  test.vert
